fix dark mode regressions

--- a/src/components/dls/Forms/Select/Select.module.scss
+++ b/src/components/dls/Forms/Select/Select.module.scss
@@ -56,6 +56,7 @@
   height: 100%;
   border: none;
   box-shadow: none;
+  color: var(--color-text-default);
   background: var(--color-background-default);
   font-size: var(--font-size-normal);
   width: calc(100% + var(--spacing-mega));
